End Fist rester step

--- a/basic/Draw3D/MainPage.xaml
+++ b/basic/Draw3D/MainPage.xaml
@@ -13,6 +13,7 @@
             x:Name="Canvas3D" 
             Draw="OnAnimatedDraw"
             SizeChanged="OnSizeChanged"
+            IsFixedTimeStep="False"
             ClearColor="Black"/>
     </Grid>
 </Page>
